--- a/css/style.scss
+++ b/css/style.scss
@@ -1,2 +1,102 @@
-$primary-color: blue;
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300;400;500&family=Poppins:wght@300;400;600&family=Roboto:wght@100;300;400&family=Source+Sans+Pro:wght@300;400&family=Ubuntu:wght@300;400;500&display=swap');
 
+$primary-color: blue;
+$base-font: 16px;
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    margin: 0;
+    box-sizing: border-box;
+    font-size: $base-font;
+    font-family: 'Roboto', sans-serif;
+}
+
+p, h1, h2, h3 {
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 60%;
+    margin: 0 auto;
+    flex-direction: column;
+
+    .header {
+        margin-top: 8rem;
+
+        h1 {
+            font-weight: 800;
+        }
+    }
+
+    .weather-container {
+        margin-top: 2rem;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+        .weather-input {
+            display: flex;
+            flex-direction: row;
+
+            button {
+                margin-left: .5em;
+            }
+        }
+
+        .weather-info {
+            text-align: center;
+            margin-top: 2rem;
+
+            .condition-container {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                min-width: 40%;
+                margin: 0 auto;
+
+                .temp-container {
+                    width: 50%;
+                    display: flex;
+                    justify-content: flex-end;
+                    h1 {
+                        font-size: 5rem;
+                    }
+                }
+
+                .condition {
+                    width: 50%;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+
+            .in {
+                padding: 1.5em 0;
+            }
+
+            .location-container {
+                h3 {
+                    opacity: .6;
+                }
+            }
+        }
+    }
+}
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: block;
+}
