--- a/css/style.scss
+++ b/css/style.scss
@@ -63,25 +63,30 @@ p, h1, h2, h3 {
                 margin: 0 auto;
 
                 .temp-container {
-                    width: 50%;
                     display: flex;
-                    justify-content: flex-end;
+                    justify-content: flex-start;
+                    padding-right: 1em;
                     h1 {
                         font-size: 5rem;
                     }
                 }
 
                 .condition {
-                    width: 50%;
                     display: flex;
-                    flex-direction: row;
+                    flex-direction: column;
                     align-items: center;
-                    justify-content: center;
+                    justify-content: flex-start;
+                    padding-left: 1em;
+
+                    h3 {
+                        font-size: 1.2em;
+                    }
                 }
             }
 
             .in {
-                padding: 1.5em 0;
+                padding: 1em 0;
+                opacity: .6;
             }
 
             .location-container {
