--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,24 @@ p, h1, h2, h3 {
         align-items: center;
         flex-direction: column;
         
+        .search-container {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+
+            .autocomplete-container {
+                position: absolute;
+                margin-top: 3em;
+                width: 100%;
+                z-index: 999;
+
+                ul {
+                    background-color: aquamarine;
+                }
+            }
+
+        }
+
         .weather-input {
             display: flex;
             flex-direction: row;
