--- a/css/style.css
+++ b/css/style.css
@@ -168,12 +168,70 @@ p, h1, h2, h3 {
 }
 
 .container .weather-container .weather-info .in {
-  padding: 1em 0;
+  padding: 1em 0 0 0;
   opacity: .6;
 }
 
 .container .weather-container .weather-info .location-container h3 {
   opacity: .6;
+}
+
+.container .weather-container .weather-info .weather-forecast {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 3em;
+}
+
+.container .weather-container .weather-info .weather-forecast .forecast-container {
+  padding: 0 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .weather-container .weather-info .weather-forecast .forecast-container .temp-container__forecast {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container .weather-container .weather-info .weather-forecast .forecast-container .temp-container__forecast h1 {
+  font-size: 1.4em;
+}
+
+.container .weather-container .weather-info .weather-forecast .forecast-container .condition-container__forecast {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding-left: 1em;
+}
+
+.container .weather-container .weather-info .weather-forecast .forecast-container .condition-container__forecast h3 {
+  font-size: .7em;
+}
+
+.container .weather-container .weather-info .weather-forecast .forecast-container .condition-container__forecast img {
+  width: 2.5em;
 }
 
 .hidden {
@@ -182,5 +240,36 @@ p, h1, h2, h3 {
 
 .visible {
   display: block;
+}
+
+@media screen and (max-width: 480px) {
+  .weather-forecast {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .forecast-container {
+    margin: 1.5em 0;
+    min-width: 100%;
+  }
+  .temp-container__forecast {
+    min-width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .condition-container__forecast {
+    min-width: 50%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
