--- a/css/style.scss
+++ b/css/style.scss
@@ -119,6 +119,10 @@ h3 {
                     h3 {
                         font-size: 1.2em;
                     }
+
+                    img {
+                        width: 6em;
+                    }
                 }
             }
 
